--- a/build.gradle
+++ b/build.gradle
@@ -37,8 +37,10 @@ dependencies {
     implementation group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.3.0'
     implementation group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0'
     implementation group: 'javax.activation', name: 'activation', version: '1.1.1'
-
+    
     testImplementation group: 'junit', name: 'junit', version: '4.12'
+
+    compile group: 'com.opencsv', name: 'opencsv', version: '4.1'
 }
 
 task wrapper(type: Wrapper) {
